--- a/index.html
+++ b/index.html
@@ -53,40 +53,51 @@
             color: red;
             text-align: center;
         }
+        .loading {
+            text-align: center;
+            color: #555;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Search for Recipes</h1>
-        <input type="text" id="searchInput" placeholder="Enter recipe name (e.g., Chicken)">
+        <input type="text" id="searchInput" placeholder="Enter recipe name (e.g., Chicken)" onkeypress="if(event.key === 'Enter') searchRecipe()">
         <button onclick="searchRecipe()">Search</button>
 
         <div id="error" class="error"></div>
+        <div id="loading" class="loading"></div>
         <div id="recipeResults"></div>
     </div>
 
     <script>
-        async function searchRecipe() {
-            const recipeName = document.getElementById('searchInput').value;
-            const errorElement = document.getElementById('error');
-            const resultsElement = document.getElementById('recipeResults');
-            errorElement.innerHTML = '';  // Clear previous errors
-            resultsElement.innerHTML = '';  // Clear previous results
+        let debounceTimeout;
 
-            if (recipeName.trim() === '') {
+        async function searchRecipe() {
+            const recipeName = document.getElementById('searchInput').value.trim();
+            const errorElement = document.getElementById('error');
+            const loadingElement = document.getElementById('loading');
+            const resultsElement = document.getElementById('recipeResults');
+
+            errorElement.innerHTML = '';
+            resultsElement.innerHTML = '';
+            loadingElement.innerHTML = 'Loading...';
+
+            if (!recipeName) {
                 errorElement.innerHTML = 'Please enter a recipe name!';
+                loadingElement.innerHTML = '';
                 return;
             }
 
             try {
-                // Update this URL to point to your FastAPI backend
-                const response = await fetch(`https://try-recipe.onrender.com/recipe/${recipeName}`);
+                const response = await fetch(`https://try-recipe.onrender.com/recipe/${encodeURIComponent(recipeName)}`);
                 const data = await response.json();
+
+                loadingElement.innerHTML = '';
 
                 if (data.error) {
                     errorElement.innerHTML = data.error;
                 } else {
-                    resultsElement.innerHTML = ''; // Clear any previous results
                     data.forEach(recipe => {
                         const recipeDiv = document.createElement('div');
                         recipeDiv.classList.add('recipe');
@@ -100,9 +111,19 @@
                     });
                 }
             } catch (error) {
+                loadingElement.innerHTML = '';
                 errorElement.innerHTML = 'An error occurred. Please try again later.';
+                console.error(error);
             }
         }
+
+        // Optional: Debounce search on input (uncomment to use)
+        /*
+        document.getElementById('searchInput').addEventListener('input', () => {
+            clearTimeout(debounceTimeout);
+            debounceTimeout = setTimeout(searchRecipe, 500); // 500ms delay
+        });
+        */
     </script>
 </body>
 </html>
