--- a/index.html
+++ b/index.html
@@ -1,53 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Search</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Recipe Finder</title>
+    <meta name="description" content="Search and discover delicious recipes with ease."/>
+    <meta name="keywords" content="recipes, cooking, food, search"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Recipe Finder"/>
+    <meta property="og:description" content="Search and discover delicious recipes with ease."/>
+    <meta property="og:url" content="https://your-domain.com/"/>
+    <meta property="og:image" content="https://your-domain.com/static/logo.png"/>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
+    <!-- Custom Styles -->
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 0;
             background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
-        .container {
+        .navbar {
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .hero-section {
+            background: url('https://via.placeholder.com/1500x500') no-repeat center center/cover;
+            padding: 100px 0;
+            text-align: center;
+            color: white;
+            position: relative;
+        }
+        .hero-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+        }
+        .hero-section h1, .hero-section p {
+            position: relative;
+            z-index: 1;
+        }
+        .search-container {
             max-width: 600px;
-            margin: 0 auto;
+            margin: 20px auto;
             padding: 20px;
-            background-color: #fff;
+            background: white;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-        input[type="text"] {
+        .search-container input {
             width: 100%;
             padding: 10px;
-            margin: 10px 0;
-            border-radius: 4px;
+            margin-bottom: 10px;
             border: 1px solid #ddd;
+            border-radius: 4px;
         }
-        button {
-            padding: 10px 15px;
+        .search-container button {
+            width: 100%;
+            padding: 10px;
             background-color: #5cb85c;
             border: none;
             color: white;
-            cursor: pointer;
             border-radius: 4px;
-            width: 100%;
+            cursor: pointer;
         }
-        button:hover {
+        .search-container button:hover {
             background-color: #4cae4c;
         }
-        .recipe {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: #f9f9f9;
+        .suggestions {
+            position: absolute;
+            top: 70px;
+            left: 20px;
+            right: 20px;
+            background: white;
+            border: 1px solid #ddd;
             border-radius: 4px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 10;
+            max-height: 200px;
+            overflow-y: auto;
+        }
+        .suggestion-item {
+            padding: 10px;
+            cursor: pointer;
+        }
+        .suggestion-item:hover {
+            background-color: #f0f0f0;
+        }
+        .accordion-item {
+            margin-bottom: 15px;
+            border-radius: 8px;
+            overflow: hidden;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .accordion-button {
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        .accordion-button:not(.collapsed) {
+            background-color: #5cb85c;
+            color: white;
         }
         .error {
             color: red;
@@ -57,31 +117,128 @@
             text-align: center;
             color: #555;
         }
+        footer {
+            background: #333;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Search for Recipes</h1>
-        <input type="text" id="searchInput" placeholder="Enter recipe name (e.g., Chicken)" onkeypress="if(event.key === 'Enter') searchRecipe()">
-        <button onclick="searchRecipe()">Search</button>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/">
+                <img src="https://via.placeholder.com/95x40" alt="Recipe Finder Logo" width="95" height="40"/>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="tel:+1-555-555-5556" class="nav-link"><i class="fas fa-phone"></i> +1 555-555-5556</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Hero Section -->
+    <section class="hero-section">
+        <div class="container">
+            <h1>Discover Delicious Recipes</h1>
+            <p>Find the perfect meal with our smart recipe search.</p>
+        </div>
+    </section>
+
+    <!-- Search Section -->
+    <div class="search-container">
+        <h2>Search Recipes</h2>
+        <input type="text" id="searchInput" placeholder="Enter recipe name (e.g., Chicken)" oninput="fetchSuggestions()" onkeypress="if(event.key === 'Enter') searchRecipe()">
+        <button onclick="searchRecipe()">Search</button>
+        <div id="suggestions" class="suggestions" style="display: none;"></div>
         <div id="error" class="error"></div>
         <div id="loading" class="loading"></div>
-        <div id="recipeResults"></div>
+        <div id="recipeResults" class="accordion" role="tablist"></div>
     </div>
 
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>© 2025 Recipe Finder. All rights reserved.</p>
+            <div>
+                <a href="/privacy" class="text-white me-3">Privacy Policy</a>
+                <a href="https://github.com" target="_blank" class="text-white me-3"><i class="fab fa-github"></i></a>
+                <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="fab fa-twitter"></i></a>
+                <a href="https://instagram.com" target="_blank" class="text-white"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS and Custom Script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         let debounceTimeout;
 
+        // Fetch recipe suggestions as user types
+        async function fetchSuggestions() {
+            const partialName = document.getElementById('searchInput').value.trim();
+            const suggestionsElement = document.getElementById('suggestions');
+
+            if (!partialName || partialName.length < 2) {
+                suggestionsElement.style.display = 'none';
+                return;
+            }
+
+            clearTimeout(debounceTimeout);
+            debounceTimeout = setTimeout(async () => {
+                try {
+                    const response = await fetch(`https://try-recipe.onrender.com/suggestions/${encodeURIComponent(partialName)}`);
+                    const data = await response.json();
+
+                    suggestionsElement.innerHTML = '';
+                    if (data.suggestions && data.suggestions.length > 0) {
+                        data.suggestions.forEach(suggestion => {
+                            const div = document.createElement('div');
+                            div.classList.add('suggestion-item');
+                            div.textContent = suggestion;
+                            div.onclick = () => {
+                                document.getElementById('searchInput').value = suggestion;
+                                suggestionsElement.style.display = 'none';
+                                searchRecipe();
+                            };
+                            suggestionsElement.appendChild(div);
+                        });
+                        suggestionsElement.style.display = 'block';
+                    } else {
+                        suggestionsElement.style.display = 'none';
+                    }
+                } catch (error) {
+                    console.error('Error fetching suggestions:', error);
+                    suggestionsElement.style.display = 'none';
+                }
+            }, 300); // 300ms debounce
+        }
+
+        // Search for recipes and display in accordion
         async function searchRecipe() {
             const recipeName = document.getElementById('searchInput').value.trim();
             const errorElement = document.getElementById('error');
             const loadingElement = document.getElementById('loading');
             const resultsElement = document.getElementById('recipeResults');
+            const suggestionsElement = document.getElementById('suggestions');
 
             errorElement.innerHTML = '';
             resultsElement.innerHTML = '';
             loadingElement.innerHTML = 'Loading...';
+            suggestionsElement.style.display = 'none';
 
             if (!recipeName) {
                 errorElement.innerHTML = 'Please enter a recipe name!';
@@ -91,6 +248,7 @@
 
             try {
                 const response = await fetch(`https://try-recipe.onrender.com/recipe/${encodeURIComponent(recipeName)}`);
+                if (!response.ok) throw new Error('Recipe not found');
                 const data = await response.json();
 
                 loadingElement.innerHTML = '';
@@ -98,16 +256,24 @@
                 if (data.error) {
                     errorElement.innerHTML = data.error;
                 } else {
-                    data.forEach(recipe => {
-                        const recipeDiv = document.createElement('div');
-                        recipeDiv.classList.add('recipe');
-                        recipeDiv.innerHTML = `
-                            <h2>${recipe.RecipeName}</h2>
-                            <p><strong>Cuisine:</strong> ${recipe.Cuisine}</p>
-                            <p><strong>Ingredients:</strong> ${recipe.Ingredients}</p>
-                            <p><strong>Instructions:</strong> ${recipe.Instructions}</p>
+                    data.forEach((recipe, index) => {
+                        const accordionItem = document.createElement('div');
+                        accordionItem.classList.add('accordion-item');
+                        accordionItem.innerHTML = `
+                            <h2 class="accordion-header" id="heading${index}">
+                                <button class="accordion-button ${index === 0 ? '' : 'collapsed'}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse${index}" aria-expanded="${index === 0 ? 'true' : 'false'}" aria-controls="collapse${index}">
+                                    ${recipe.RecipeName}
+                                </button>
+                            </h2>
+                            <div id="collapse${index}" class="accordion-collapse collapse ${index === 0 ? 'show' : ''}" aria-labelledby="heading${index}" data-bs-parent="#recipeResults">
+                                <div class="accordion-body">
+                                    <p><strong>Cuisine:</strong> ${recipe.Cuisine}</p>
+                                    <p><strong>Ingredients:</strong> ${recipe.Ingredients}</p>
+                                    <p><strong>Instructions:</strong> ${recipe.Instructions}</p>
+                                </div>
+                            </div>
                         `;
-                        resultsElement.appendChild(recipeDiv);
+                        resultsElement.appendChild(accordionItem);
                     });
                 }
             } catch (error) {
@@ -116,14 +282,6 @@
                 console.error(error);
             }
         }
-
-        // Optional: Debounce search on input (uncomment to use)
-        /*
-        document.getElementById('searchInput').addEventListener('input', () => {
-            clearTimeout(debounceTimeout);
-            debounceTimeout = setTimeout(searchRecipe, 500); // 500ms delay
-        });
-        */
     </script>
 </body>
 </html>
