--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         .hero-section {
-            background: url('https://via.placeholder.com/1500x500') no-repeat center center/cover;
+            background: url('https://img.freepik.com/free-vector/recipe-book-concept-illustration_114360-7481.jpg?w=360') no-repeat center center/cover;
             padding: 100px 0;
             text-align: center;
             color: white;
