--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         footer {
             background: #333;
             color: white;
-            padding: 20px 0;
+            padding: 20px;
             text-align: center;
         }
     </style>
