--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         .search-container {
+            flex: 1; /* Allow the content section to grow and push the footer down */
             max-width: 600px;
             margin: 20px auto;
             padding: 20px;
@@ -97,11 +98,13 @@
             text-align: center;
             color: #555;
         }
+        /* Footer stays at the bottom */
         footer {
             background: #333;
             color: white;
             padding: 20px;
             text-align: center;
+            width: 100%;
         }
     </style>
 </head>
