--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             color: #555;
         }
         /* Footer stays at the bottom */
-        footer {
+        .footer {
             background: #333;
             color: white;
             padding: 20px;
