--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
+            margin: 100px;
+            padding: 100px;
         }
         .navbar {
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -99,7 +99,7 @@
             color: #555;
         }
         /* Footer stays at the bottom */
-        .footer {
+        footer {
             background: #333;
             color: white;
             padding: 20px;
