--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
-            margin: 100px;
-            padding: 100px;
+            margin: 0;
+            padding: 0;
         }
         .navbar {
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         .search-container {
             flex: 1; /* Allow the content section to grow and push the footer down */
-            max-width: 600px;
+            max-width: 100%;
             margin: 20px auto;
             padding: 20px;
             background: white;
