--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         }
         .search-container {
             flex: 1; /* Allow the content section to grow and push the footer down */
-            max-width: 100%;
+            max-width: 750px;
             margin: 20px auto;
-            padding: 20px;
+            padding: 200px;
             background: white;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
