--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         .search-container {
             flex: 1; /* Allow the content section to grow and push the footer down */
             max-width: 750px;
-            margin: 20px auto;
-            padding: 200px;
+            margin: 20px 20px 100px 20px;
+            padding: 20px;
             background: white;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
