--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         .search-container {
             flex: 1; /* Allow the content section to grow and push the footer down */
             max-width: 750px;
-            margin: 100px;
+/*             margin: 20px; */
+            margin-bottom: 100px;
             padding: 20px;
             background: white;
             border-radius: 8px;
