--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         .search-container {
             flex: 1; /* Allow the content section to grow and push the footer down */
             max-width: 750px;
-/*             margin: 20px; */
-            margin-bottom: 100px;
+            margin: 20px auto;
             padding: 20px;
             background: white;
             border-radius: 8px;
@@ -84,7 +83,7 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         .accordion-button {
-            background-color: #f9f9f9;
+            background-color: #000000;
             color: #333;
         }
         .accordion-button:not(.collapsed) {
@@ -103,7 +102,7 @@
         footer {
             background: #333;
             color: white;
-            padding: 20px;
+            padding-bottom: 20px;
             text-align: center;
             width: 100%;
         }
