--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +30,7 @@
         }
         .search-container {
             flex: 1; /* Allow the content section to grow and push the footer down */
-            max-width: 750px;
+            max-width: 600px;
             margin: 20px auto;
             padding: 20px;
             background: white;
@@ -83,7 +84,7 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         .accordion-button {
-            background-color: #000000;
+            background-color: #f9f9f9;
             color: #333;
         }
         .accordion-button:not(.collapsed) {
@@ -102,7 +103,7 @@
         footer {
             background: #333;
             color: white;
-            padding-bottom: 20px;
+            padding: 20px;
             text-align: center;
             width: 100%;
         }
