--- a/index.html
+++ b/index.html
@@ -100,12 +100,20 @@
             color: #555;
         }
         /* Footer stays at the bottom */
-        footer {
+/*         footer {
             background: #333;
             color: white;
             padding: 20px;
             text-align: center;
             width: 100%;
+        } */
+        footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            text-align: center;
         }
     </style>
 </head>
