--- a/index.html
+++ b/index.html
@@ -108,11 +108,12 @@
             width: 100%;
         } */
         footer {
-            position: fixed;
+            position: absolute;
             bottom: 0;
             left: 0;
+            color: white;
             width: 100%;
-            background-color: #333;
+            background: #333;
             text-align: center;
         }
     </style>
