--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             position: relative;
+            padding-bottom: 500px;
         }
         .search-container input {
             width: 100%;
@@ -88,7 +89,6 @@
             width: 100%;
         } */
         footer {
-            position: absolute;
             bottom: 0;
             left: 0;
             color: white;
