--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div id="error" class="error"></div>
         <div id="loading" class="loading"></div>
         <div id="recipeResults" class="accordion" role="tablist"></div>
-        <img src="https://imgs.search.brave.com/ZKj1WjgLrC4vuaBEg7BMxKBT3KDlHAV605dtAFmyB2w/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90My5m/dGNkbi5uZXQvanBn/LzA5LzE4LzAyLzYy/LzM2MF9GXzkxODAy/NjIxNl96eGgxREUx/Q3JCeVFjZ3BrTUZJ/YjFNYllCeElOM3Fv/UC5qcGc" alt="description">
+        <img id="image" src="https://imgs.search.brave.com/ZKj1WjgLrC4vuaBEg7BMxKBT3KDlHAV605dtAFmyB2w/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90My5m/dGNkbi5uZXQvanBn/LzA5LzE4LzAyLzYy/LzM2MF9GXzkxODAy/NjIxNl96eGgxREUx/Q3JCeVFjZ3BrTUZJ/YjFNYllCeElOM3Fv/UC5qcGc" alt="description">
     </div>
 
     <!-- Footer -->
@@ -206,6 +206,10 @@
                 errorElement.innerHTML = 'An error occurred. Please try again later.';
                 console.error(error);
             }
+        }
+            // Function to hide the image
+        function searchRecipe() {
+          document.getElementById('image').style.display = 'none';
         }
     </script>
 </body>
